2010-03-03  Sancho Lerena <slerena@artica.es>
	
	* (A lot of files): Updated include("config.php") and replaced by
	global $config.

	* functions_db.php, functions_html.php: Fixed way to get data from the hash
	instead from the array. 

2010-03-03  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: add in the last time a function "printMap2"
	that it is a clean function. Change the function "printMap" to call
	"printMap2".
	
	* include/javascript/openlayers.pandora.js: in function "js_printMap" set
	the spherical Mercator for google maps. 
	
	* operation/gis_maps/render_view.php: add to list of $baselayers the name
	of baselayer. Change order of div for map because now the script don't
	call when document ready. 

2010-03-03  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_db.php: Use mysql_fetch_assoc instead of
	  mysql_fetch_array to avoid duplicate results (hash and array).

	* godmode/alerts/configure_alert_template.php: Added 'matches_value'
	  support to 'onchange' alerts.

2010-03-03  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_gis.php: add new parameter to function "addPath" the
	$lastPosition for paint the line to last position that this position is not
	in the table tgis_data_history. In function "getAgentMap" use the new
	parameter in the function "addPath".
	 
	* operation/gis_maps/render_view.php: tiny fix in the include javascript
	of google. And few stetic changes in the top menu. And add the new parameter
	to "addPath".

2010-03-03  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/gis_maps/render_view.php: close in the end a unclose php tag.

2010-03-03  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/gis_view.php: fix "Call-time pass-by-reference" for
	function "print_table".

2010-03-02  Sancho Leren <slerena@artica.es>

	* include/functions_ui.php: Fixes default icon for operation
	mode in the title.

	* operation/incidents/incident.php