@@ -1,3 +1,7 @@
+2010-03-03  Raúl Mateos <raulofpandora@gmail.com>
+
+	* operation/incidents/*.php: Updated year and headers.
+
 2010-03-03  Sancho Lerena <slerena@artica.es>
 	
 	* (A lot of files): Updated include("config.php") and replaced by
@@ -47,7 +51,7 @@
 	* operation/agentes/gis_view.php: fix "Call-time pass-by-reference" for
 	function "print_table".
 
-2010-03-02  Sancho Leren <slerena@artica.es>
+2010-03-02  Sancho Lerena <slerena@artica.es>
 
 	* include/functions_ui.php: Fixes default icon for operation
 	mode in the title.
